add description projet

--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>PROJECTS</h1>
+              <h1>PROJETS</h1>
               <p class="mb-0">Voici les projets que j'ai réalisés dans le cadre de mon BTS SIO. Cliquez sur l'un d'eux
                 pour en savoir plus sur les solutions que j'ai développées et les compétences acquises !
               </p>
@@ -162,22 +162,7 @@
                 </strong>
             </div>
           </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item  position-relative">
-              <div class="icon">
-                <i class=" bi bi-code-slash"></i>
-              </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3> INTRODUCTION A BOOTSTRAP</h3>
-              </a>
-              <p>Créer une page web statique présentant votre projet professionnel, puis héberger cette page dans un
-                conteneur Docke.</p>
-                <strong class="dates"><br>
-                  <p>Starter : <span> 0.0.0.0 au 0.0.0.0 </span></p>
-                </strong>
-            </div>
-          </div><!-- End Service Item -->
+ 
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
