--- a/Project/97CAR-Symfony/context.html
+++ b/Project/97CAR-Symfony/context.html
@@ -87,8 +87,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Service Details</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <h1>97CAR SYMFONY</h1>
+              
             </div>
           </div>
         </div>
@@ -112,34 +112,71 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <a href="#" class="active">Web Design</a>
-              <a href="#">Software Development</a>
-              <a href="#">Product Management</a>
-              <a href="#">Graphic Design</a>
-              <a href="#">Marketing</a>
+              <a href="context.html" class="active">Présentation du Contexte</a>
+              <a href="bdd.html"  >Base de Données</a>
+              <a href="gestion.html">Gestion de Projet </a>
+              <a href="description.html">Description du Projet</a>
+              <a
+                href="https://spectacled-chicory-108.notion.site/f15a09e153d84705b8c5b7098e520efb?v=10b119315e87804691ab000c27b50df8&p=13c119315e878078b0c7c2fd04ecfa75&pm=s" target="_blank" >Documentation</a>
+              <a href="https://github.com/lmoutanin/97CAR-Symfony">GitHub</a>
             </div>
 
-            <h4>Enim qui eos rerum in delectus</h4>
-            <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
           </div>
 
+
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="../../assets/img/services/services-4.webp" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+           <center>  <img src="../../assets/project/img/logo_97car.png" class="glightbox preview-link" alt="" class="img-fluid services-img"></center>
+            <br>
+            <center> <h3>Contexte du projet </h3> </center>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
+              Le but du projet était de concevoir et de mettre en place un système de gestion informatisé afin de moderniser et centraliser les 
+              opérations quotidiennes du garage 97CAR. Ce système visait à optimiser la gestion des véhicules, des propriétaires,
+               des réparations ainsi que des factures, dans le but d'améliorer l'efficacité, la traçabilité et la qualité du service au sein de l’entreprise.
+            </p><br>
+
+            <h4>Missions Principale :</h4>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+              <li><i class="bi bi-arrow-right"></i> <span>Analyse des besoins : Collaboration avec l’équipe pour définir les exigences fonctionnelles et techniques.</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Modélisation de la base de données : Conception sous PostgreSQL pour gérer les véhicules, propriétaires et interventions.</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Développement web : Création d’une interface avec Symfony pour gérer les véhicules, réparations et factures.</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Fonctionnalités avancées : Authentification sécurisée, gestion des rôles, et dashboard interactif.</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Déploiement : Hébergement de l’application sous Docker sur une machine virtuelle Linux. </span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Gestion de projet : Organisation en sprints selon la méthode Agile (Scrum).</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Documentation : Rédaction des guides techniques et d’utilisation. </span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Conception graphique : Création du logo et de la charte graphique du garage. </span></li>
+               
+            </ul> <br>
+
+            <h4>Environnement technique :</h4>
+              <ul>
+                <li><i class="bi bi-arrow-right"></i> <span>Langages et Frameworks : PHP (Symfony) </span></li>
+                <li><i class="bi bi-arrow-right"></i> <span>Base de données : PostgreSQL</span></li>
+                <li><i class="bi bi-arrow-right"></i> <span>Outils de virtualisation : Docker </span></li>
+                <li><i class="bi bi-arrow-right"></i> <span>Contrôle de version : Git </span></li>
+                <li><i class="bi bi-arrow-right"></i> <span>Méthodologie de gestion de projet : Scrum </span></li>
+              </ul><br>
+
+              <h4>Compétences Acquises:</h4><br>
+
+              <p> <strong>Développement d'applications web :</strong>  </p> 
+              <ul>
+                <li><i class="bi bi-arrow-right-short"></i>  <span>Analyse et conception fonctionnelle : Recueil et définition des besoins utilisateurs pour une solution adaptée   </span></li>
+                <li><i class="bi bi-arrow-right-short"></i> <span>Programmation : Utilisation de PHP avec Symfony pour développer des applications robustes.</span></li>
+                <li><i class="bi bi-arrow-right-short"></i> <span>Gestion de bases de données : Conception et administration de bases PostgreSQL pour une gestion efficace des données.</span></li>
+              </ul>
+
+              <p> <strong>Gestion de projet agile :</strong>  </p> 
+              <ul>
+                <li><i class="bi bi-arrow-right-short"></i>  <span>Planification et suivi : Application de la méthodologie Scrum pour une gestion efficace du projet.</span></li>
+                <li><i class="bi bi-arrow-right-short"></i>  <span>Collaboration : Travail d'équipe pour assurer la réussite du projet.</span></li>
+              </ul>
+
+              <p> <strong>Administration système :</strong>  </p> 
+              <ul>
+                <li><i class="bi bi-arrow-right-short"></i>  <span>Déploiement : Installation et configuration de l'application sur une VM Linux avec Docker pour une infrastructure fiable.</span></li>
+              </ul>
+
+
           </div>
 
         </div>
