--- a/Project/Lycee44/context.html
+++ b/Project/Lycee44/context.html
@@ -104,7 +104,7 @@
               <a href="description.html">Description du Projet</a>
               <a href="https://drive.google.com/drive/folders/1XiE84O7Oc9EiHDL1e07qxIFdHQRWQrMx?usp=drive_link"
                 target="_blank">Documentation</a>
-              <a href="https://github.com/lmoutanin/97CAR-Symfony" target="_blank">GitHub</a>
+              <a href="https://github.com/lmoutanin/Lycee-44" target="_blank">GitHub</a>
             </div>
 
           </div>
