--- a/Project/Lycee44/description.html
+++ b/Project/Lycee44/description.html
@@ -103,7 +103,7 @@
                             <a href="description.html" class="active">Description du Projet</a>
                             <a href="https://drive.google.com/drive/folders/1XiE84O7Oc9EiHDL1e07qxIFdHQRWQrMx?usp=drive_link"
                                 target="_blank">Documentation</a>
-                            <a href="https://github.com/lmoutanin/97CAR-Symfony" target="_blank">GitHub</a>
+                            <a href="https://github.com/lmoutanin/Lycee-44" target="_blank">GitHub</a>
                         </div>
 
                     </div>
@@ -120,129 +120,127 @@
 
 
                         <p>
-                            Dans ce projet, une interface d'authentification a été mise en place avec Symfony pour
-                            permettre aux utilisateurs de se connecter à l'interface d'administration du garage et
-                            d'accéder aux outils disponibles.​
+                            Dans ce projet, une application web de suivi des absences a été développée avec Symfony pour
+                            permettre aux utilisateurs de s’authentifier et de gérer les absences au sein de l’interface
+                            dédiée du Lycée 44.
+
                         </p><br>
 
 
 
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        <center> <img src="../../assets/project/lycee 44/dashbord.png" width="700" height="400"
+                                class="glightbox preview-link" class="img-fluid services-img">
                         </center>
 
                         <br><br>
 
 
-                        <h4>Dans le cadre du projet 97CAR, quatre outils principaux ont été développés pour faciliter la
-                            gestion quotidienne du garage : </h4><br>
+                        <h4>Dans le cadre du projet Lycee 44, quatre outils principaux ont été développés pour faciliter
+                            la
+                            gestion des absences : </h4><br>
 
-                        <h3>1. Client </h3>
-                        <p>Cette interface permet l'enregistrement et le suivi des informations des clients.​</p>
+                        <h3>1. Etudiant </h3>
+                        <p>Cette interface permet de gérer les informations des étudiants, ainsi que leur rattachement à
+                            une classe.​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/client-1.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/etudiant-1.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/client-2 (2).png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/etudiant-2.png" width="700" height="400"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
 
-                        <center> <img src="../../assets/project/97car-symfony/client4.png" width="700" height="220"
+
+
+                        <center> <img src="../../assets/project/lycee 44/etudiant-4.png" width="700" height="200"
+                                class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+
+                        <center> <img src="../../assets/project/lycee 44/etudiant-5.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
 
-                        <center> <img src="../../assets/project/97car-symfony/client5.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
 
-                        <h3>2. Voiture </h3>
-                        <p>Cette interface permet de gère les détails des véhicules, y compris leur association avec les
-                            clients.​</p>
+                        <h3>2. Classe </h3>
+                        <p>Cette interface permet de gérer les détails des classes, ainsi que leur association avec les
+                            étudiants.​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/classe-1.png" width="700" height="220"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture2.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/classe-2.png" width="700" height="300"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture3.png" width="700" height="220"
+                        <center> <img src="../../assets/project/lycee 44/classe-3.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture5.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/classe-4.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture4.png" width="700" height="220"
+                        <h3>3. Matiére</h3>
+                        <p>Cette interface permet de gérer les informations des matières, telles que leur nom, leur
+                            coefficient et leur volume horaire.​​</p>
+
+                        <center> <img src="../../assets/project/lycee 44/matiere-1.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <h3>3. Réparation </h3>
-                        <p>Cette interface permet d'enregistre les interventions réalisées sur les véhicules, avec les
-                            détails correspondants.​​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/reparation.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/matiere-2.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/reparation2.png" width="700" height="220"
+                        <center> <img src="../../assets/project/lycee 44/matiere-3.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/reparation3 (2).png" width="700"
-                                height="200" class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation4.png" width="700" height="200"
+                        <center> <img src="../../assets/project/lycee 44/matiere-4.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <h3>4. Facture </h3>
-                        <p>Cette interface permet de génère et archive les factures liées aux interventions effectuées.​
+
+                        <h3>4. Absence </h3>
+                        <p>Cette interface permet d’enregistrer et de gérer les absences des étudiants, avec la
+                            possibilité d’indiquer si elles sont justifiées.​
                         </p>
 
-
-                        <center> <img src="../../assets/project/97car-symfony/facture.png" width="700" height="350"
+                        <center> <img src="../../assets/project/lycee 44/absence-1.png" width="700" height="200"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
+
+                        <center> <img src="../../assets/project/lycee 44/absence-2.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
+
+                        <center> <img src="../../assets/project/lycee 44/absence-3.png" width="700" height="200"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture3.png" width="700" height="220"
+
+                        <center> <img src="../../assets/project/lycee 44/absence-4.png" width="700" height="250"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/facture4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/facture5.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
-
 
                         <h3>Autre</h3>
                         <p>Dans ce projet, un système de déconnexion a été mis en place avec Symfony pour permettre aux
-                            utilisateurs de se déconnecter de l'interface d'administration du garage. Cette
-                            fonctionnalité assure la sécurité en mettant fin à la session active, empêchant ainsi tout
-                            accès non autorisé aux outils de gestion.</p>
-                        <center> <img src="../../assets/project/97car-symfony/deco.png" width="700" height="120"
+                            utilisateurs de se déconnecter de l’interface de suivi des absences. Cette fonctionnalité
+                            renforce la sécurité en mettant fin à la session active, évitant ainsi tout accès non
+                            autorisé aux données sensibles.</p>
+                        <center> <img src="../../assets/project/lycee 44/deco.png" width="700" height="120"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        <center> <img src="../../assets/project/lycee 44/dashbord.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
                         </center>
 
                     </div>
